最后的修改版本，修改了逻辑，移入移除，饼图提示和横线

--- a/纯html+js饼状图/index.html
+++ b/纯html+js饼状图/index.html
@@ -12,15 +12,15 @@
       }
 
       .canvas {
-        width: 500px;
-        height: 500px;
+        width: 1000px;
+        height: 1000px;
         border: 1px solid royalblue;
         background-color: rgb(255, 255, 255);
       }
     </style>
   </head>
   <body>
-    <canvas width="1000" height="1000" ref="canvas" class="canvas"></canvas>
+    <canvas width="2000" height="2000" ref="canvas" class="canvas"></canvas>
   </body>
-  <script src="./main.js"></script>
+  <script src="./main2.js"></script>
 </html>
